--- a/Android/Tag4ReelTest/AndroidManifest.xml
+++ b/Android/Tag4ReelTest/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.loginwithswipe"
+    package="com.example.tag4reeltest"
     android:versionCode="1"
     android:versionName="1.0" >
 
@@ -29,7 +29,7 @@
             android:windowSoftInputMode="adjustResize|stateVisible" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.example.loginwithswipe.MainActivity" />
+                android:value="com.example.tag4reeltest.MainActivity" />
         </activity>
     </application>
 
